welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:14: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
    } else if (getX()==abscisseFinale&&getY()=ordonneeFinale-1){
                                     ^